# ghost

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_backtest.py  run_dashboard.py
ghost/: __init__.py  __main__.py  api.py
ghost/config/: instruments.json  learnings.json  settings.py
ghost/core/: models.py  orchestrator.py
ghost/db/migrations/: v55_additions.sql
ghost/debug/: health.py
ghost/dispatch/: __init__.py  agents.py  cli.py  tools.py
ghost/modules/m00_backtest/: __init__.py  engine.py  runner.py
ghost/modules/m01_data/: __init__.py  loader.py  models.py  resampler.py
ghost/modules/m02_regime/: __init__.py  detector.py  models.py
ghost/modules/m03_signal/: __init__.py  amd.py  fvg.py  killzone.py  liquidity.py  order_block.py  signal_generator.py  structure.py
ghost/modules/m04_confluence/: __init__.py  scorer.py
ghost/modules/m05_risk/: __init__.py  manager.py
ghost/modules/m06_sizing/: __init__.py  sizer.py
ghost/modules/m07_execution/: __init__.py  engine.py
ghost/modules/m08_monitor/: __init__.py  monitor.py
ghost/modules/m09_journal/: __init__.py  journal.py
ghost/modules/m10_dashboard/: __init__.py  app.py  panels.py  run_dashboard.py
ghost/modules/m11_llm/: __init__.py  client.py
ghost/modules/m12_news/: __init__.py  sentiment.py
ghost/modules/m13_training/: __init__.py  trainer.py
ghost/modules/m14_quant/: __init__.py  analytics.py
ghost/modules/m15_benchmark/: __init__.py  benchmark.py
ghost/modules/m17_stop_calibration/: __init__.py  dynamic_migrator.py  hunt_predictor.py  (+2 more)
(+26 files in other folders)
