[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost"
version = "5.5.0"
description = "AI-powered autonomous futures trading system"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Dean Krotzer"}]

[project.scripts]
ghost-dispatch = "ghost.dispatch.cli:run"

[tool.pytest.ini_options]
testpaths = ["ghost/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
